[metadata]
name = toolpy
version = 0.1.0
#author = 
#author_email = 
#description = 
long_description = file: README.md
long_description_content_type = text/markdown
#url = 
#project_urls =
#    Bug Tracker = 
#    Documentation = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research

[options]
include_package_data = True
package_dir =
    = src
packages = find:
#python_requires = 
install_requires =
    numpy


[options.packages.find]
where = src

#[options.extras_require]
